--- a/bumger/templates/receipt/create.html
+++ b/bumger/templates/receipt/create.html
@@ -21,15 +21,15 @@
         <select name="receiver" id="receiver" required>
             <option value="0">Select receiver</option>
             {% for receiver in receivers %}
-            <option value="{{ receiver.id }}">{{ receiver.name }}</option>
+            <option value="{{ receiver.receiver_id }}">{{ receiver.receiver_name }}</option>
             {% endfor %}
         </select>
 
         <label for="amount">Amount</label>
-        <input name="amount" id="title" value="275.0" required>
+        <input name="amount" id="amount" value="275.0" required>
 
         <label for="issue_date">Issue date</label> <!-- TODO set default value to today-->
-        <input name="issue_date" id="title" value="{{ request.form['issue_date'] }}" required>
+        <input name="issue_date" id="issue_date" value="{{ request.form['issue_date'] }}" required>
 
         <label for="status">Status</label>
         <select name="status" id="title" disabled>
