--- a/bumger/templates/receipt/index.html
+++ b/bumger/templates/receipt/index.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% set active_page = "index" %}
 
 {% macro nav_link(endpoint, name) %}
     <a class="action" href="{{ url_for(endpoint) }}">{{ name }}</a>
@@ -6,7 +7,6 @@
 
 {% block header %}
     <h1>{% block title %}Receipts{% endblock %}</h1>
-    {{ nav_link('payment.index', 'Payments') }}
     {{ nav_link('receipt.create', 'New') }}
 {% endblock %}
 
