--- a/bumger/templates/payment/receipt.html
+++ b/bumger/templates/payment/receipt.html
@@ -27,7 +27,7 @@
   <div class="data">
     <div>{{ receipt['number'] }} <span id="amount">S/. {{ receipt['amount'] }}</span></div>
     <br><br>
-    <div>{{ receipt['owner'] }} - {{ receipt['property'] }}</div>
+    <div>{{ receipt['receiver'] }} - {{ receipt['property'] }}</div>
   	<br>
   	<div><span>{{ rec_form['str_amount'] }}</span></div>
   	<br>
