--- a/bumger/templates/expense/index.html
+++ b/bumger/templates/expense/index.html
@@ -1,11 +1,8 @@
 {% extends 'base.html' %}
+{% set active_page = "expenses" %}
 
 {% macro nav_link(endpoint, name) %}
-    {% if request.endpoint.endswith(endpoint) %}
-        <li class="active"><a href="{{ url_for(endpoint) }}">{{ name }}</a></li>
-    {% else%}
-        <a href="{{ url_for(endpoint) }}">{{ name }}</a>
-    {% endif %}
+    <a class="action" href="{{ url_for(endpoint) }}">{{ name }}</a>
 {% endmacro %}
 
 {% block header %}
@@ -14,16 +11,36 @@
 {% endblock %}
 
 {% block content %}
+    <br />
+    <table>
+      <thead>
+        <tr>
+          <th>#</th>
+          <th>Number</th>
+          <th>Issue</th>
+          <th>Detail</th>
+          <th>Provider</th>
+          <th>Amount</th>
+        </tr>
+      </thead>
     {% for expense in expenses %}
-            <div>
-                <h1>{{ expense['provider'] }}</h1>
-                <div class="about">
-                    {{ expense['expense_date'].strftime('%Y-%m-%d') }} <a class="action" href="##" title="Edit">{{ expense['receipt_number'] }}</a>
-                    {{ expense['product'] }} S/.{{ expense['amount'] }}
-                </div>
-            </div>
-        {% if not loop.last %}
-            <hr>
-        {% endif %}
+      <tbody>
+        <tr class="{{ loop.cycle('odd', 'even') }}">
+          <td>{{ loop.index }}</td>
+          <td> <a class="action" href="{{ url_for('expense.update', id=expense.id) }}">{{ expense.bill_number }}</a></td>
+          <td>{{ expense.expense_date.strftime('%d/%m/%Y') }}</td>
+          <td>{{ expense.concept }}</td>
+          <td>{{ expense.provider_name }}</td>
+          <td class="number">{{ expense.amount|float(default=0.0) }}</td>
+        </tr>
+      </tbody>
     {% endfor %}
+      <tfoot>
+        <tr>
+          <th colspan="4"></th>
+          <th>Total:</th>
+          <th class="number">{{ expenses|sum(attribute='amount')|float }}</th>
+        </tr>
+      </tfoot>
+    </table>
 {% endblock %}
