--- a/bumger/templates/expense/receipt.html
+++ b/bumger/templates/expense/receipt.html
@@ -4,27 +4,47 @@
 
 <body>
 
-<h3>Edificio Buen Retiro # 185 - 195</h3>
-
 <div id="header">
-	<br>
-	<div><span class="bold-label">Recibo Nro:</span> {{ receipt['number'] }} <span id="amount">S/. {{ receipt['amount'] }}</span></div>
+  <h3>Edificio Buen Retiro # 185 - 195</h3>
+  <br>
 </div>
 
 <div id="body">
-	<br><br>
-	<div class="label">Recibí de:<span>&nbsp;{{ receipt['owner'] }}</span> - <span>{{ receipt['description'] }}</span></div>
-	<br>
-	<div class="label">la cantidad de:<span>&nbsp;{{ rec_form['str_amount'] }} Nuevos Soles</span></div>
-	<br>
-	<div class="label">por concepto de:<span>&nbsp;{{ receipt['concept_desc'] }}</span></div>
-	<br>
-	<div class="label">Fecha cancelación: <span>&nbsp;dd-mm-YYYY</span></div>
+	<div class="label">
+    <div><span class="bold-label">Recibo Nro:</span></div>
+    <br><br>
+    <div>Recibí de:</div>
+  	<br>
+  	<div>la cantidad de:</div>
+  	<br><br><br>
+  	<div>por concepto de:</div>
+  	<br>
+    {% if receipt['note'] %}
+    <div><br></div>
+    {% endif %}
+  	<div>Fecha cancelación:</div>
+  </div>
+  <div class="data">
+    <div>{{ receipt['number'] }} <span id="amount">S/. {{ receipt['amount'] }}</span></div>
+    <br><br>
+    <div>{{ receipt['owner'] }} - {{ receipt['property'] }}</div>
+  	<br>
+  	<div><span>{{ rec_form['str_amount'] }}</span></div>
+  	<br>
+    <div>Nuevos Soles</div>
+  	<br>
+  	<div>{{ receipt['concept'] }}</div>
+    {% if receipt['note'] %}
+    <div>{{ receipt['note'] }}</div>
+    {% endif %}
+  	<br>
+  	<div>{{ receipt['payment_date'].strftime('%d/%m/%Y') }}</div>
+  </div>
 </div>
 
 <div id="footer">
 	<br><br>
-	<div class="label">Fecha cancelación: <span>&nbsp;dd-mm-YYYY</span></div>
+	<div>Santiago de Surco, <span>&nbsp;{{ rec_form.today }}</span></div>
 </div>
 
 </body>
