--- a/bumger/templates/expense/update.html
+++ b/bumger/templates/expense/update.html
@@ -1,57 +1,63 @@
 {% extends 'base.html' %}
 
 {% block header %}
-	<h1>{% block title %}Edit "{{ receipt['number'] }}"{% endblock %}</h1>
+	<h1>{% block title %}Receipt: "{{ payment.receipt_number }}"{% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
     <form method="post">
         <label for="number">Receipt number</label>
-        <input name="number" id="title" value="{{ request.form['number'] or receipt['number'] }}" disabled>
-        
-        <label for="concepts">Concept</label>
-        <select name="concepts" id="title" value="{{ request.form['concept'] or receipt['concept_id'] }}" required>
+        <input name="number" id="number" value="{{ request.form['receipt_number'] or payment['receipt_number'] }}" disabled>
+
+        <label for="issue_date">Receipt date</label>
+        <input name="issue_date" id="title" value="{{ payment['receipt_date'] }}" disabled>
+
+        <label for="rec_amount">Receipt Amount</label>
+        <input name="rec_amount" id="rec_amount" value="{{ payment['receipt_amount'] }}" disabled>
+
+        <label for="concept">Concept</label>
+        <select name="concept" id="concept" value="{{ request.form['concept'] or payment['concept_id'] }}" disabled>
             <option value="0">Select concept</option>
             {% for concept in concepts %}
-                {% if concept.id == receipt['concept_id'] %}
+                {% if concept.id == payment['concept_id'] %}
                 <option value="{{ concept.id }}" selected>{{ concept.description }}</option>
                 {% else %}
                 <option value="{{ concept.id }}">{{ concept.description }}</option>
                 {% endif %}
             {% endfor %}
         </select>
-        
-        <label for="owner">Owner/Resident ({{ receipt['person_id'] }})</label>
-        <select name="owner" id="title" value="{{ request.form['person_id'] or receipt['person_id'] }}" required>
-            <option value="0">Select owner</option>
-        {% for owner in owners %}
-            {% if owner.id == receipt['person_id'] %}
-            <option value="{{ owner.id }}" selected>{{ owner.first_name }} {{ owner.last_name }}</option>
-            {% else %}
-            <option value="{{ owner.id }}">{{ owner.first_name }} {{ owner.last_name }}</option>
-            {% endif %}
-        {% endfor %}
+
+        <label for="receiver">Receiver</label>
+        <select name="receiver" id="receiver" value="{{ request.form['receiver_id'] or payment['receiver_id'] }}" disabled>
+            <option value="0">Select receiver</option>
+            {% for receiver in receivers %}
+                {% if receiver.receiver_id == payment['receiver_id'] %}
+                <option value="{{ receiver.receiver_id }}" selected>{{ receiver.property_alias }} - {{ receiver.receiver_name }}</option>
+                {% else %}
+                <option value="{{ receiver.receiver_id }}">{{ receiver.receiver_id }} {{ receiver.property_alias }} - {{ receiver.occupant_name }}</option>
+                {% endif %}
+            {% endfor %}
         </select>
-        
-        <label for="amount">Amount</label>
-        <input name="amount" id="title" value="{{ request.form['amount'] or receipt['amount'] }}" required>
-        
-        <label for="issue_date">Issue date</label>
-        <input name="issue_date" id="title" value="{{ request.form['issue_date'] or receipt['issue_date'] }}" required>
-        
+
+        <label for="payment_date">Payment date</label>
+        <input name="payment_date" id="payment_date" value="{{ request.form['payment_date'] or payment['payment_date'] }}" required>
+
+        <label for="amount">Payment Amount</label>
+        <input name="amount" id="amount" value="{{ request.form['amount'] or payment['amount'] }}" required>
+
         <label for="status">Status</label>
-        <select name="status" id="title" value="{{ request.form['status'] or receipt['status'] }}" required>
+        <select name="status" id="title" value="{{ request.form['status'] or payment['status'] }}" required>
             <option value="P" selected>Pendant</option>
             <option value="C">Cancelled</option>
-        </select
-        
+        </select>
+
         <label for="comments">Comments</label>
-        <textarea name="comments" id="body">Lorem Ipso</textarea>
-        
+        <textarea name="comments" id="body"></textarea>
+
         <input type="submit" value="Save">
     </form>
     <hr>
-    <form action="{{ url_for('receipt.delete', id=receipt['id']) }}" method="post">
+    <form action="{{ url_for('payment.delete', id=1) }}" method="post">
         <input class="danger" type="submit" value="Delete" onclick="return confirm('Are you sure?');">
     </form>
 {% endblock %}
